--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,8 +1,8 @@
-#summary 系统设计概要
+#summary 操作手册
 
 = 系统组成 =
 
-记录仪无线通讯系统，由记录仪无线扩展模块、无线基站模块组成和管理计算机组成。
+记录仪无线通讯系统，由记录仪无线扩展终端模块、无线基站模块组成和管理计算机组成。
 无线扩展模块连接到记录仪RS232通信接口，并通过Zigbee协议和无线基站通信。
 无线基站模块通过Zigbee协议从无线扩展模块读取数据并存储到FLASH文件系统中。
 管理计算机和无线基站模块通过以太网链接，可以从无线基站中下载数据。
@@ -13,3 +13,28 @@
 当载有记录仪的车辆进入无线基站的通讯范围后，无线扩展模块自动和基站建立链接，基站向无线扩展模块发出数据读取指令，无线扩展模块接收指令后，通过串口读取记录仪的数据，并将数据转发给基站模块。基站模块读取完整数据后将数据保存为USB磁盘交换文件格式。
 
 对于多台车辆的情况，基站采用排队方式，依次分别读取各记录仪数据。
+
+= 终端模块 =
+
+== 硬件介绍 ==
+
+模块供电通过USB电缆提供
+
+除电源LED指示灯外，另外有三个状态指示LED，正常工作时1、3号指示灯亮。
+
+此外还有两个按钮，1号按钮用于人工启动网络接入。2号按钮暂时未定义。
+
+== 软件编译/烧写 ==
+
+=== 软件编译 ===
+
+* 将zstack解压，在工程文件在ZStack\Projects\zstack\Utilities\SerialApp\CC2430DB目录下
+
+* 使用IAR FOR MS51 7.3B打开工程文件，选择Workspace->EndDevice编译,
+
+=== 烧写 ===
+
+* 连接JTAG仿真器，USB接PC，另一端连接目标板
+
+* 在打开的IAR软件中选择Debug, 当软件提示下载完成后，即可终止调试。这时目标板已经烧写成功。
+
