Edited wiki page PageName through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -2,7 +2,7 @@
 
 = 系统组成 =
 
-记录仪无线通讯系统，由记录仪无线扩展终端模块、无线基站模块组成和管理计算机组成。
+记录仪无线通讯系统，由记录仪无线终端模块、无线基站模块组成和管理计算机组成。
 无线扩展模块连接到记录仪RS232通信接口，并通过Zigbee协议和无线基站通信。
 无线基站模块通过Zigbee协议从无线扩展模块读取数据并存储到FLASH文件系统中。
 管理计算机和无线基站模块通过以太网链接，可以从无线基站中下载数据。
@@ -14,27 +14,58 @@
 
 对于多台车辆的情况，基站采用排队方式，依次分别读取各记录仪数据。
 
-= 终端模块 =
+= 无线终端模块 =
 
 == 硬件介绍 ==
 
-模块供电通过USB电缆提供
+无线终端模块由单一一块无线通信单元构成。
+
+无线通信单元两种，一种用于记录仪，一种用于基站。他们在硬件上完全相同，只是加载不同的程序。
+
+无线通信单元USB电缆提供
 
 除电源LED指示灯外，另外有三个状态指示LED，正常工作时1、3号指示灯亮。
 
 此外还有两个按钮，1号按钮用于人工启动网络接入。2号按钮暂时未定义。
 
-== 软件编译/烧写 ==
+== 软件编译 ==
 
-=== 软件编译 ===
+ * 将zstack解压，在工程文件在ZStack\Projects\zstack\Utilities\SerialApp\CC2430DB目录下
 
-* 将zstack解压，在工程文件在ZStack\Projects\zstack\Utilities\SerialApp\CC2430DB目录下
+ * 使用IAR FOR MS51 7.3B打开工程文件，选择Workspace->EndDevice编译,生成记录仪终端模块无线通信单元的代码
 
-* 使用IAR FOR MS51 7.3B打开工程文件，选择Workspace->EndDevice编译,
+ * 使用IAR FOR MS51 7.3B打开工程文件，选择Workspace->Cordnator编译,生成基站模块无线通信单元的代码
 
-=== 烧写 ===
+== 烧写 ==
 
-* 连接JTAG仿真器，USB接PC，另一端连接目标板
+ * 连接JTAG仿真器，USB接PC，另一端连接目标板
 
-* 在打开的IAR软件中选择Debug, 当软件提示下载完成后，即可终止调试。这时目标板已经烧写成功。
+ * 在打开的IAR软件中，切换到需要烧写模块的Workspace, 然后选择Debug, 当软件提示下载完成后，即可终止调试。这时目标板已经烧写成功。
 
+ * 也可以使用TI提供的CC24xx系列的烧写工具进行
+
+= 基站模块 =
+
+基站模块分两部分，一部分是基站控制单元，另一部分是无线通信单元。无线通信单元的程序编译烧制如前所述，参见无线通信单元的。这里主要介绍控制单元的硬件和软件设置
+
+== 硬件 ==
+
+控制单元硬件为一ARM嵌入式系统，通过RS232串口和无线通信单元连接，通过USB接口为通信单元供电。
+
+== 软件 ==
+
+===交叉编译环境配置===
+
+* 准备Linux操作系统
+
+* 在Linux系统中安装交叉编译器
+
+===烧写控制单元操作系统===
+
+
+
+===软件编译===
+
+* 编译控制软件
+
+* 上传控制软件
