--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -2,27 +2,25 @@
 
 = 系统组成 =
 
-记录仪无线通讯系统，由记录仪无线终端模块、无线基站模块组成和管理计算机组成。
-无线扩展模块连接到记录仪RS232通信接口，并通过Zigbee协议和无线基站通信。
-无线基站模块通过Zigbee协议从无线扩展模块读取数据并存储到FLASH文件系统中。
+记录仪无线通讯系统，由*无线终端*、*无线基站*和管理计算机组成。
+*无线通讯单元*连接到记录仪RS232通信接口组成*无线终端*，并通过Zigbee协议和无线基站通信。
+无线基站通过Zigbee协议从无线终端读取数据并存储到FLASH文件系统中。
 管理计算机和无线基站模块通过以太网链接，可以从无线基站中下载数据。
 
 
 = 工作流程 =
 
-当载有记录仪的车辆进入无线基站的通讯范围后，无线扩展模块自动和基站建立链接，基站向无线扩展模块发出数据读取指令，无线扩展模块接收指令后，通过串口读取记录仪的数据，并将数据转发给基站模块。基站模块读取完整数据后将数据保存为USB磁盘交换文件格式。
+当载有记录仪的车辆进入无线基站的通讯范围后，无线通讯单元自动和基站建立链接，基站向无线通讯单元发出数据读取指令，无线通讯单元接收指令后，通过串口读取记录仪的数据，并将数据转发给基站。基站读取完整数据后将数据保存为USB磁盘交换文件格式。
 
 对于多台车辆的情况，基站采用排队方式，依次分别读取各记录仪数据。
 
-= 无线终端模块 =
+= 无线通讯单元 =
 
 == 硬件介绍 ==
 
-无线终端模块由单一一块无线通信单元构成。
-
 无线通信单元两种，一种用于记录仪，一种用于基站。他们在硬件上完全相同，只是加载不同的程序。
 
-无线通信单元USB电缆提供
+无线通信单元USB电缆提供电源，通过RS232接口和其他设备交换数据。
 
 除电源LED指示灯外，另外有三个状态指示LED，正常工作时1、3号指示灯亮。
 
@@ -100,8 +98,6 @@ dmesg
 
 ====烧写步骤====
 
-下面的烧写步骤也可以使用脚本完成。
-
 1  将核心版SW1，SW2置于OFF位，链接USB电缆
 
 2  启动SAM-BA软件，选择board type(at91sam9261ek)和端口(/dev/ttyUSB1) 
@@ -151,8 +147,26 @@ setenv bootdelay 0
 saveenv
 }}}
 
+以上烧写步骤也可以使用脚本完成。
+
+
+
 ===软件编译===
 
 * 编译控制软件
 
+解压缩控制源程序到目录。
+进入ARM子目录，运行
+{{{
+make all
+}}}
+
 * 上传控制软件
+
+将开发板接入网络，缺省地址是192.168.1.77，用户root/000000
+{{{
+scp qb root@192.168.1.77
+}}}
+
+* 执行程序
+/qb /dev/ttyS2
