Edited wiki page PageName through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -65,6 +65,12 @@
 基本操作是将编译器包解压缩到自选的目录，一般建议解压缩到/opt目录下
 在此项目中使用的版本是arm-none-linux-gnueabi-gcc 4.3.2版
 
+* 对于arm-linux-gcc-4.3.2.tgz编译器压缩包,将压缩包拷贝到/tmp目录下，执行以下命令解压缩
+{{{
+cd /
+sudo tar -xvzf /tmp/arm-linux-gcc-4.3.2.tgz
+}}}
+
 ===烧写控制单元操作系统===
 
 开发版提供的已经烧写好的系统不能满足需要，需要烧写自己定制的操作系统和文件系统才能满足功能要求。
