Edited wiki page PageName through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -162,19 +162,43 @@ saveenv
 * 编译控制软件
 
 解压缩控制源程序到目录。
-进入ARM子目录，运行
+进入src子目录，运行
 {{{
-make all
+arm-none-linux-gnueabi-g++ -o qb *.cpp
 }}}
+生成可执行文件qb
 
 * 上传控制软件
 
 将开发板接入网络，缺省地址是192.168.1.77，用户root/000000
+执行下面命令将可执行文件拷贝到控制单元
 {{{
-scp qb root@192.168.1.77
+scp qb root@192.168.1.77:/
 }}}
 
 * 执行程序
 {{{
 /qb /dev/ttyS2
 }}}
+
+
+= 系统演示 =
+
+==准备工作==
+
+ # 确认已经将qb拷贝到控制单元
+ # 确认基站控制单元连接到/dev/ttyS2端口
+ 
+==操作步骤==
+
+ # 从记录仪下载数据
+   通过ssh连接到基站模块，在linux下执行以下命令
+{{{
+ssh root@192.168.1.77
+}}}
+   在windows环境下，可下载ssh客户端putty软件连接
+
+ # 登录系统后，运行/qb /dev/ttyS2
+   程序执行结束后，应该在根目录下生成TEST.IBB文件
+
+ # 在Windows系统下，安装WinScp程序，启动WinScp后将IBB文件拷贝到Windows系统，就可以象读U盘一样导入数据了。
