--- a/wiki/leds.wiki
+++ b/wiki/leds.wiki
@@ -1,7 +1,9 @@
 #summary 指示灯说明
 
-接入网络， led3亮（靠近USB口）
-
-led3,led2亮，成功匹配
+LED定义,从靠近USB口开始，分别为LED3，LED2，LED1
+||状态||LED3||LED2||LED1||
+||亮||接入网络||匹配绑定||终端绑定||
+||灭||未接入网络||-||未绑定||
+||闪烁||接入失败||数据通讯中||绑定失败||
 
 led2亮，其他灭，休眠
